--- a/패키지변수함수.md
+++ b/패키지변수함수.md
@@ -357,3 +357,57 @@ Hello 세계
 Happy 3.14 Day
 Go rules? true
 ```
+
+## Numeric-constants
+
+- type이 정해지지 않은 상수는 맥락에 따라 타입이 변한다.
+- 숫자형 상수는 `var` 로 표현할 수 없는 범위를 저장하는 등 수를 정밀하게 표현할 수 있다.
+- `needInt(big)` 을 출력해보면 오버플로우 에러가 발생한다.
+
+```go
+package main
+
+import "fmt"
+
+const (
+	// Create a huge number by shifting a 1 bit left 100 places.
+	// In other words, the binary number that is 1 followed by 100 zeroes.
+	Big = 1 << 100
+	// Shift it right again 99 places, so we end up with 1<<1, or 2.
+	Small = Big >> 99
+)
+
+func needInt(x int) int { return x*10 + 1 }
+func needFloat(x float64) float64 {
+	return x * 0.1
+}
+
+func main() {
+	fmt.Println(needInt(Small))
+	fmt.Println(needFloat(Small))
+	fmt.Println(needFloat(Big))
+	fmt.Println(needInt(Big)) //오류
+}
+
+```
+
+- 비트 연산을 통해 큰 상수와 작은 상수를 만든다.
+- `Big = 1 << 100` 은 1의 비트를 100비트 왼쪽으로 이동시킨 것으로 이진수로는 1 뒤에 100개의 0이 붙은 형태이다.
+    - 10진수로는 매우 큰 숫자가 된다. ⇒ 1 * 2^100
+- `Small = Big >> 99` 은 `Big` 을 99비트 오른쪽으로 이동시킨 것으로 `1 << 1` 이 된다.
+    - `1<<1` 은 2이다.
+
+<aside>
+💡 비트 이동 연산
+
+- **왼쪽 시프트 연산 (Left Shift Operation)**: `n << k`는 `n`의 비트들을 왼쪽으로 `k`만큼 이동시키고, 오른쪽에는 `k`개의 0이 채워진다.
+- **오른쪽 시프트 연산 (Right Shift Operation)**: `n >> k`는 `n`의 비트들을 오른쪽으로 `k`만큼 이동시키고, 왼쪽에는 0이 채워진다.
+</aside>
+
+```go
+./prog.go:22:22: cannot use Big (untyped int constant 1267650600228229401496703205376) as int value in argument to needInt (overflows)
+
+Go build failed.
+```
+
+- int 타입은 일반적으로 32비트 or 64비트이기 때문에 `Big` 은 너무 큰 수라 int로 표현할 수 없다.
