--- a/패키지변수함수.md
+++ b/패키지변수함수.md
@@ -284,7 +284,7 @@ func main() {
 ./task.go:11:15: cannot use f (variable of type float64) as uint value in variable declaration
 ```
 
-- typeConversionMain가 발생한다.
+- typeConversionsMain 오류가 발생한다.
 
 ```go
 func main() {
